резолвим сининимы тегов перед отправкой уведомлений